--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
     "vue": "^3.2.13",
+    "vue-load-image": "^1.1.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
