--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@popperjs/core": "^2.11.8",
+    "@vueuse/head": "^2.0.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
     "vue": "^3.2.13",
