--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
-    "@ckeditor/ckeditor5-inspector": "^4.1.0",
-    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@ckeditor/ckeditor5-vue": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -18,6 +16,8 @@
     "@popperjs/core": "^2.11.8",
     "@vueuse/head": "^2.0.0",
     "bootstrap": "^5.3.2",
+    "ckeditor5": "^42.0.2",
+    "ckeditor5-premium-features": "^42.0.2",
     "firebase": "^10.6.0",
     "vue": "^3.2.13",
     "vue-load-image": "^1.1.0",
