--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor5-premium-features": "^42.0.2",
     "firebase": "^10.6.0",
     "vue": "^3.2.13",
+    "vue-gtag": "^2.0.1",
     "vue-load-image": "^1.1.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
